<resources>
    <string name="app_name">CustoViagem</string>
    <string name="table_valor">VALOR</string>
    <string name="table_gasolina">GASOLINA</string>
    <string name="table_tarifa">TARIFA AÉREA</string>
    <string name="table_refeicoes">REFEIÇÕES</string>
    <string name="table_hospedagem">HOSPEDAGEM</string>
    <string name="table_entretenimento">ENTRETENIMENTO</string>
    <string name="login">Login</string>
    <string name="login_usuario">Usuário</string>
    <string name="login_senha">Senha</string>
    <string name="login_cadastrar">Cadastrar</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_usuario">Usuario</string>
    <string name="cadastro_senha">Senha</string>
    <string name="confirmar_senha">Confirma a sua Senha</string>
    <string name="voltar">Voltar</string>
    <string name="gravar">Gravar</string>
    <string name="calcular">Calcular</string>
    <string name="cadastro_info">Informe seus dados para cadastro</string>
    <string name="valor_total">Total</string>
    <string name="table_check">Adiciona ao valor total?</string>
    <string name="total_pessoas">Total de viajantes</string>
    <string name="dias_viajem">Duração da viagem (dias)</string>
    <string name="valor_default">0.00</string>
    <string name="qtd_default">0</string>
    <string name="de_onde">De onde</string>
    <string name="para_onde">Para onde</string>
    <string name="listar">Listar</string>
    <string name="lista_Destino">DESTINO CALCULADOS</string>
    <string name="forgot_senha">Esqueceu a senha?</string>
    <string name="login_google">ou conectar-se usando</string>
    <string name="Check_save_dados">Salvar dados de login</string>
    <string name="lbl_cadastro">Não tem uma conta?</string>
    <string name="btn_cadastrar"> Cadastre-se</string>
</resources>